force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/Ramp_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Entity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ramp Entity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>