force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/Ramp_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Sync_Error__c</fullName>
    <label>Ramp Sync Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>