force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/Ramp_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Sync_Status__c</fullName>
    <label>Ramp Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synced_To_Ramp</fullName>
                <label>Synced To Ramp</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>